
version 5.0-alpha6 (2015-10-06)
    * Fixes parsing of custom response headers in HTTPRequest.send (iss #153).

version 5.0-alpha7 (2015-10-20)
    * Factors out JWTAssertionClaimsSet into assertions.jwt package.
    * Factors out JWTAssertionClaimsSetVerifier into assertions.jwt package.
    * Adds JWTAssertionClaimsSet support for multiple audiences.
    * Adds JWTBearerGrant checks to reject unsecured JWT assertions or
      JWT assertion in a state that cannot be serialised.
    * Moves token_endpoint_auth_signing_alg field from OIDCClientMetadata to
      ClientMetadata to enable its use by generic OAuth 2.0 clients.
    * Adds HostnameVerifier and SSLSocketFactory support to HTTPRequest (iss
      #149).
    * Adds static Audience utilities.
    * Adds convenience Audience(URI) and Audience(Identifier) constructors.
    * Adds convenience Issuer(URI) and Issuer(Identifier) constructors.
    * Adds convenience ClientID(Identifier) constructor.
    * Adds Scope copy constructor.
    * Upgrades to Nimbus JOSE+JWT 4.3.
    * Fixes missing software_id copy in ClientMetadata copy constructor.
    * Fixes missing software_version copy in ClientMetadata copy constructor.

version 5.0-alpha8 (2015-10-20)
    * Caches exceptions emitted by JWTAssertionClaimsSetVerifier.
    * Caches exceptions emitted by JWTAuthenticationClaimsSetVerifier.

version 5.0-alpha9 (2015-10-30)
    * Adds GeneralException(ErrorObject) constructor.

version 5.0-alpha10 (2015-11-09)
    * Adds Audience.create(String[]) static helper.
    * Adds Audience.matchesAny(Collection<Audience>,Collection<Audience>)
      static helper.

version 5.0-alpha11 (2015-11-10)
    * Adds support for nested (JWS-signed then JWE-encrypted) JWT bearer
      assertions.

version 5.0-alpha12 (2015-11-19)
    * Implements OAuth 2.0 token introspection (RFC 7662) request and response
      classes.
    * Adds OIDCProviderMetadata support for custom (not registered) parameters.


